--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Playlist Generator</title>
+    <link rel="icon" type="image/png" href="https://i.imgur.com/sONK6Yr.png">
+    <title>Playlist Garden</title>
 </head>
 
 <body>
